@@ -40,6 +40,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #27661: Added tzinfo keyword argument to datetime.combine.
+
 - Issue #27568: Prevent HTTPoxy attack (CVE-2016-1000110). Ignore the
   HTTP_PROXY variable when REQUEST_METHOD environment is set, which indicates
   that the script is in CGI mode.
